--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ a:visited {
 }
 
 body {
-  background-color: #effffb;
+  background-color: #d2ebe9;
   margin: 0;
   text-align: center;
   font-size: 1.25rem;
