--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,8 @@ img {
 }
 
 .div1 {
-  width: 100%;
   height: auto;
+  width: auto;
   margin: 0 auto;
   position: relative;
 }
@@ -65,15 +65,17 @@ img {
 }
 
 .desert {
-  width: 100%;
+  max-height: 100vh;
+  max-wdith: 100vw;
   height: auto;
+  width: auto;
   margin: 0 auto;
   display: block;
 }
 
 .h1_1 {
   position: absolute;
-  font-size: 15vh;
+  font-size: 5rem;
   font-family: 'Merienda', cursive;
   margin: 0;
   top: 10%;
@@ -84,11 +86,11 @@ img {
 .p_1 {
   margin: 0;
   position: absolute;
-  font-size: 10vh;
+  font-size: 3rem;
   font-family: 'Gochi Hand', cursive;
   color: #1E47B9;
   bottom: 7.5%;
-  right: 0;
+  right: 7.5%;
 }
 
 .data-science {
