--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,6 @@ img {
 }
 
 .div1 {
-  height: auto;
-  width: 100vw;
   margin: 0 auto;
   position: relative;
 }
@@ -66,7 +64,8 @@ img {
 
 .desert {
   width: auto ;
-  max-width: 100% ;
+  max-width: 100vw;
+  max-height: 100vh;
   height: auto;
   margin: 0 auto;
   display: block;
