--- a/HTML Personal Site/CSS/styles.css
+++ b/HTML Personal Site/CSS/styles.css
@@ -4,7 +4,7 @@ a:visited{
 
 body {
   background-color: #FFF4e4;
-  font-size: 1.15rem;
+  font-size: 3vh;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -19,21 +19,21 @@ br {
 
 h1 {
   color: #4d80e4;
-  font-size: 2.5rem;
+  font-size: 7.5vh;
   margin-top: 30px;
   font-family: 'Crete Round', serif;
 }
 
 h3 {
   color: #0c9463;
-  font-size: 1.6rem;
+  font-size: 5vh;
   font-style: italic;
   text-decoration: underline;
   font-family: 'Crete Round', serif;
 }
 
 h4 {
-  font-size: 1.3rem;
+  font-size: 4vh;
   font-style: italic;
   text-decoration: underline;
   font-family: 'Playfair Display', serif;
