--- a/HTML Personal Site/CSS/styles.css
+++ b/HTML Personal Site/CSS/styles.css
@@ -4,12 +4,8 @@ a:visited{
 
 body {
   background-color: #FFF4e4;
-  font-size: 4vh;
+  font-size: 1.15rem;
   font-family: 'Raleway', sans-serif;
-}
-
-input {
-  height: 4vh;
 }
 
 br {
@@ -23,21 +19,21 @@ br {
 
 h1 {
   color: #4d80e4;
-  font-size: 7.5vh;
+  font-size: 2.5rem;
   margin-top: 30px;
   font-family: 'Crete Round', serif;
 }
 
 h3 {
   color: #0c9463;
-  font-size: 6vh;
+  font-size: 1.6rem;
   font-style: italic;
   text-decoration: underline;
   font-family: 'Crete Round', serif;
 }
 
 h4 {
-  font-size: 5vh;
+  font-size: 1.3rem;
   font-style: italic;
   text-decoration: underline;
   font-family: 'Playfair Display', serif;
@@ -45,7 +41,6 @@ h4 {
 
 p {
   margin-top: 20px;
-  line-height: 1.5;
 }
 
 hr {
@@ -60,7 +55,7 @@ hr {
 }
 
 img {
-  width: 70%;
+  width: 75%;
   height: auto;
 }
 
